tests/NormalTests/paczka1/small_fuzzy/53604858.err
Error in line 3: xQOinaIBIn A353 57,3
Error in line 7: 8W8AOW2io A353 67,21
Error in line 6: xQOinaIBIn A471 99,9
Error in line 4: xL0R A471 25,6
Error in line 11: xL0R A80 34,3
